Aggiunta modalità notturna
Aggiunta modalità notturna che se abilitata nelle impostazioni, si attiverà automaticamente dalle 20 alle 6

--- a/app/src/main/res/layout/activity_speed.xml
+++ b/app/src/main/res/layout/activity_speed.xml
@@ -46,6 +46,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textAlignment="center"
+        android:textColor="?attr/metaTextColor"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="@+id/progressBar2"
         app:layout_constraintEnd_toEndOf="@+id/progressBar2"
